#61[Lokesh] Added the menu collapse button for the photo album and corrected some bugs

--- a/core/static/css/v2/layout/components/main-content/gallery/gallery.less
+++ b/core/static/css/v2/layout/components/main-content/gallery/gallery.less
@@ -159,7 +159,7 @@
       padding-top: 0;
       position: absolute;
       top: 10px;
-      z-index: 99999999;
+      z-index: 9;
 
       &.go-back{
         width: auto;
